--- a/FirebaseLearn/app/src/main/AndroidManifest.xml
+++ b/FirebaseLearn/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.FirebaseLearn"
         tools:targetApi="31">
         <activity
+            android:name=".ui.activity.DashboardActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.activity.RegisterActivity"
             android:exported="false" />
         <activity
