Product CRUD Addition

--- a/FirebaseLearn/app/src/main/AndroidManifest.xml
+++ b/FirebaseLearn/app/src/main/AndroidManifest.xml
@@ -15,6 +15,33 @@
         android:theme="@style/Theme.FirebaseLearn"
         tools:targetApi="31">
         <activity
+            android:name=".ui.activity.AddProductActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.activity.ProductDashboardActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.activity.ProductFormActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".ui.activity.DashboardActivity"
             android:exported="false" />
         <activity
